sticky-session-tester/kubernetes/service-cookie.yaml
apiVersion: v1
kind: Service
metadata:
  name: sticky-tester-cookie
  namespace: sticky-session-tester
  labels:
    app: sticky-session-tester
    service-type: cookie
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: sticky-session-tester
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
