sticky-session-tester/kubernetes/httproute-roundrobin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sticky-tester-roundrobin
  namespace: sticky-session-tester
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "roundrobin.localhost"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /app
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: rewrite-app-to-sticky
    backendRefs:
    - name: sticky-tester-roundrobin
      port: 80
