sticky-session-tester/kubernetes/ingressroute-roundrobin.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sticky-tester-roundrobin
  namespace: sticky-session-tester
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`roundrobin.localhost`) && PathPrefix(`/app`)
    kind: Rule
    middlewares:
    - name: rewrite-app-to-sticky
    services:
    - name: sticky-tester-roundrobin
      port: 80
